syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pedror.grpc";
option java_outer_classname = "MusicasGrpcProto";

package musica;

service MusicaService {
  rpc GetUsuarios (Vazio) returns (GetUsuariosResposta) {
  }

  rpc GetMusicas (Vazio) returns (GetMusicasResposta) {
  }

  rpc GetPlaylistsDoUsuario (GetPlaylistsDoUsuarioRequisicao) returns (GetPlaylistDoUsuarioResposta) {
  }

  rpc GetMusicasDaPlaylist (GetMusicasDaPlaylistRequisicao) returns (GetMusicasDaPlaylistResposta) {
  }

  rpc GetPlaylistsComMusica (GetPlaylistsComMusicaRequisicao) returns (GetPlaylistsComMusicaResposta) {
  }
  rpc CriarUsuario (CriarUsuarioRequisicao) returns (CriarUsuarioResposta) {

  }
  rpc CriarMusica (CriarMusicaRequisicao) returns (CriarMusicaResposta) {

  }
  rpc CriarPlaylist (CriarPlaylistRequisicao) returns (CriarPlaylistResposta) {

  }
  rpc AtualizarUsuario (AtualizarUsuarioRequisicao) returns (AtualizarUsuarioResposta) {

  }
  rpc AtualizarMusica (AtualizarMusicaRequisicao) returns (AtualizarMusicaResposta) {

  }
  rpc AtualizarPlaylist (AtualizarPlaylistRequisicao) returns (AtualizarPlaylistResposta) {

  }
  rpc DeletarUsuario (DeletarUsuarioRequisicao) returns (DeletarUsuarioResposta) {

  }
  rpc DeletarMusica (DeletarMusicaRequisicao) returns (DeletarMusicaResposta) {

  }
  rpc DeletarPlaylist (DeletarPlaylistRequisicao) returns (DeletarPlaylistResposta) {

  }
}

message Vazio {}

message UsuarioGrpc {
  int32 id = 1;
  string nome = 2;
  int32 idade = 3;
  repeated PlaylistGrpc playlists = 4;
}

message MusicaGrpc {
  int32 id = 1;
  string nome = 2;
  string artista = 3;
}

message PlaylistGrpc {
  int32 id = 1;
  string nome = 2;
  repeated MusicaGrpc musicas = 4;
}

message GetUsuariosResposta {
  repeated UsuarioGrpc usuarios = 1;
}

message GetMusicasResposta {
  repeated MusicaGrpc musicas = 1;
}

message GetPlaylistsDoUsuarioRequisicao {
  int32 idUsuario = 1;
}

message GetPlaylistDoUsuarioResposta {
  repeated PlaylistGrpc playlists = 1;
}

message GetMusicasDaPlaylistRequisicao {
  int32 idPlaylist = 1;
}

message GetMusicasDaPlaylistResposta {
  repeated MusicaGrpc musicas = 1;
}

message GetPlaylistsComMusicaRequisicao {
  int32 idMusica = 1;
}

message GetPlaylistsComMusicaResposta {
  repeated PlaylistGrpc playlists = 1;
}

message CriarUsuarioRequisicao {
  string nome = 1;
  int32 idade = 2;
  repeated int32 idPlaylists = 3;
}

message CriarUsuarioResposta {
  UsuarioGrpc usuario = 1;
}

message CriarMusicaRequisicao {
  string nome = 1;
  string artista = 2;
}

message CriarMusicaResposta {
  MusicaGrpc musica = 1;
}

message CriarPlaylistRequisicao {
  string nome = 1;
  repeated int32 idMusicas = 2;
}

message CriarPlaylistResposta {
  PlaylistGrpc playlist = 1;
}

message AtualizarUsuarioRequisicao {
  int32 id = 1;
  string nome = 2;
  int32 idade = 3;
  repeated int32 idPlaylists = 4;
}

message AtualizarUsuarioResposta {
  UsuarioGrpc usuario = 1;
}

message AtualizarMusicaRequisicao {
  int32 id = 1;
  string nome = 2;
  string artista = 3;
}

message AtualizarMusicaResposta {
  MusicaGrpc musica = 1;
}

message AtualizarPlaylistRequisicao {
  int32 id = 1;
  string nome = 2;
  repeated int32 idMusicas = 3;
}

message AtualizarPlaylistResposta {
  PlaylistGrpc playlist = 1;
}

message DeletarUsuarioRequisicao {
  int32 id = 1;
}

message DeletarUsuarioResposta {
  string resultado = 1;
}

message DeletarMusicaRequisicao {
  int32 id = 1;
}

message DeletarMusicaResposta {
  string resultado = 1;
}

message DeletarPlaylistRequisicao {
  int32 id = 1;
}

message DeletarPlaylistResposta {
  string resultado = 1;
}